erDiagram
    stories ||--o{ pages : "storyId"
    stories ||--o| pages : "startPageId"
    
    pages ||--o{ choices : "embedded"
    
    stories {
        ObjectId _id PK
        Number authorPostgresId "FK vers users PostgreSQL"
        String title
        String description
        Array tags "Tags libres"
        String genre "Genre de l histoire"
        String status "brouillon|publié"
        ObjectId startPageId FK "Ref pages"
        String coverImage "URL optionnelle"
        Object rating
        Number rating-average "Moyenne calculée"
        Number rating-count "Nb votes PostgreSQL"
        Object stats
        Number stats-totalPlays "Global"
        Number stats-totalCompletions "Fins"
        Boolean isSuspended "Admin suspend"
        Date createdAt
        Date updatedAt
    }
    
    pages {
        ObjectId _id PK
        ObjectId storyId FK
        String content "Texte scene"
        String illustration "URL optionnelle"
        Boolean isEnd "Page finale"
        String endLabel "Label de fin ex Fin héroïque"
        Array choices "Choix embeddes"
        ObjectId choices-_id "ID unique choix"
        String choices-text "Texte du choix"
        ObjectId choices-targetPageId "Page cible"
        Number choices-order "Ordre affichage"
        Number choices-diceRequirement "Optionnel jet dés"
        Date createdAt
        Date updatedAt
    }
    
    choices {
        ObjectId _id "Embedded dans pages"
        String text "Texte du choix"
        ObjectId targetPageId FK "Page cible"
        Number order "Ordre affichage"
        Number diceRequirement "Optionnel"
    }